[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.2.7",
    "langchain-core>=0.3.86",
    "langchain-openai>=0.3.35",
    "langgraph==1.0.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.57.0",
]
